mdapi/objects/addressValidation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>JIRA SSF-65. Setting to determine whether address validation on Leads, Accounts and Contacts can be bypassed or not.</description>
    <fields>
        <fullName>canBypassAddressValidationOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA SSF-65</description>
        <inlineHelpText>If checked, can bypass address validation on an Account object.</inlineHelpText>
        <label>Can bypass address validation on Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>canBypassAddressValidationOnContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA SSF-65</description>
        <inlineHelpText>If checked, can bypass address validation on a Contact object.</inlineHelpText>
        <label>Can bypass address validation on Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>canBypassAddressValidationOnLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA SSF-65</description>
        <inlineHelpText>If checked, can bypass address validation on a Lead object.</inlineHelpText>
        <label>Can bypass address validation on Lead</label>
        <type>Checkbox</type>
    </fields>
    <label>Address Validation</label>
</CustomObject>